--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,6 @@
 <%= form_for :user, url: users_path do |f| %>
 
+
 	<%= f.label :firstname %>
 	<%= f.text_field :firstname %><br />
 
@@ -9,9 +10,28 @@
 	<%= f.label :email %>
 	<%= f.text_field :email %><br />
 
+	<%= f.label :country %>
+	<%= f.text_field :country %><br />
+
+	<%= f.label :city %>
+	<%= f.text_field :city %><br />
+
+
+	<%= f.label :house %>
+	<%= f.text_field :house %><br />
+
+
 	<%= f.label :password %>
 	<%= f.text_field :password %><br />
 
+
 	<%= f.submit "Save" %>
+
+	
+	 <ul>
+    <% @user.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+  	</ul>
 
 <% end %>
