--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,11 @@
 <%= form_for :user, url: users_path do |f| %>
 
-
+ 	<ul>
+    <% @user.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+  	</ul>
+  	
 	<%= f.label :firstname %>
 	<%= f.text_field :firstname %><br />
 
@@ -8,7 +13,7 @@
 	<%= f.text_field :lastname %><br />
 
 	<%= f.label :email %>
-	<%= f.text_field :email %><br />
+	<%= f.text_field :email %><br /><br />
 
 	<%= f.label :country %>
 	<%= f.text_field :country %><br />
@@ -18,7 +23,7 @@
 
 
 	<%= f.label :house %>
-	<%= f.text_field :house %><br />
+	<%= f.text_field :house %><br /><br />
 
 
 	<%= f.label :password %>
@@ -27,11 +32,7 @@
 
 	<%= f.submit "Save" %>
 
+
 	
-	 <ul>
-    <% @user.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  	</ul>
 
 <% end %>
