--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,7 +5,7 @@
       <li><%= msg %></li>
     <% end %>
   	</ul>
-  	
+
 	<%= f.label :firstname %>
 	<%= f.text_field :firstname %><br />
 
@@ -21,6 +21,8 @@
 	<%= f.label :city %>
 	<%= f.text_field :city %><br />
 
+	<%= f.label :street %>
+	<%= f.text_field :street %><br />
 
 	<%= f.label :house %>
 	<%= f.text_field :house %><br /><br />
