added user profile

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,2 @@
-Firstname: <%= @user.firstname %>
-Lastname: <%= @user.lastname %>
+<h1> Hello <%= @user.firstname %> <%= @user.lastname %>!</h1>
+<h2>Your home adress: <%= @user.country %> <%= @user.city %> <%= @user.street %> <%= @user.house %></h2>
