--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -4,7 +4,7 @@
 	<%= f.text_field :email %><br />
 
 	<%= f.label :password %>
-	<%= f.text_field :password %><br />
+	<%= f.password_field :password %><br />
 
 	<%= f.submit "Save" %>
 
