--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -29,8 +29,10 @@
 
 
 	<%= f.label :password %>
-	<%= f.text_field :password %><br />
-
+	<%= f.password_field :password %><br />
+	
+	Confirm password:
+	<%= f.password_field :password_confirmation %><br />
 
 	<%= f.submit "Save" %>
 
